[project]
name = "voluptuous_errors"
version = "0.1"
description = "report voluptuous errors"
readme = "README.rst"
requires-python = ">=3.8"
dependencies = [
    "inform",
    "nestedtext",
    "voluptuous",
]
authors = [
    {name = "Ken Kundert"},
    {email = "quantiphy@nurdletech.com"}
]
classifiers = [
    # "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
]

[project.urls]
homepage = "https://github.com/KenKundert/voluptuous_errors"
repository = "https://github.com/KenKundert/voluptuous_errors"


[build-system]
requires = ["flit_core >=2"]
build-backend = "flit_core.buildapi"

[tool.pytest.ini_options]
addopts = "--tb=short"

[tool.ruff]
exclude = [".tox", "doc", "Diffs"]

[tool.ruff.lint]
select = ["F"]
ignore = []

[tool.ruff.lint.per-file-ignores]
